testsuite/tests/typecheck/should_run/T16453M4.hs
module Main (module T16453T)  where
import T16453T
main = putStrLn "T16453M4"
