testsuite/tests/typecheck/should_fail/T19397E1.hs
module Main (main) where
import T19397S

main :: IO ()
main = putStrLn "T19397E1"
